objects/EXPRN__Alerts_View__c.object
<CustomObject>
    <description>Contains alerts displayed in the alerts list view</description>
    <fields>
        <fullName>EXPRN__Alert_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Alert_Monitored_Set__c</fullName>
        <label>Alert Monitored Set</label>
        <referenceTo>EXPRN__Alert_Monitored_Set_Name__c</referenceTo>
        <relationshipLabel>Experian Alerts View</relationshipLabel>
        <relationshipName>Alerts_View</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Alerts View</relationshipLabel>
        <relationshipName>Alerts_View</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Description__c</fullName>
        <description>61+ Days Past Due(7)
DBT Change(1) 91+ Days
Past Due(1)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Experian Alerts View</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alerts View</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>